ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - host: "api.message.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: server-nginx-service
                port:
                  number: 80
    - host: "dashboard.message.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
    - host: "rabbitmq.message.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-cluster-ip-service
                port:
                  number: 15672
    - host: "monitoring.message.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grafana-cluster-ip-service
                port:
                  number: 3000
